--- a/public_html/promise/index.html
+++ b/public_html/promise/index.html
@@ -1,3 +1,4 @@
 function task(x){ 
-  return new Promise((res, rej) => x < 18 ? res('Yes') : rej('no'));
+  return new Promise((res, rej) => x < 18 ? res('Yes') : rej('no'))
+             .catch(rej => { console.log(rej); });
 }
