--- a/public_html/fetch/index.html
+++ b/public_html/fetch/index.html
@@ -13,7 +13,7 @@
     <script>
         bt.AddEventListener('click', () => {
             fetch(inp.value)
-            .then((resp) => text())
+            .then((response) => text())
             .then((data) => {
                 inp.value = data
             })
