--- a/public_html/fetch/index.html
+++ b/public_html/fetch/index.html
@@ -17,8 +17,8 @@
             .then((data) => {
                 inp.value = data
             })
-            .catch(reject => {
-                console.log(reject);
+            .catch(e => {
+                console.log(e);
             });
         });
     </script>
