--- a/public_html/fetch/index.html
+++ b/public_html/fetch/index.html
@@ -15,7 +15,9 @@
         btn.addEventListener('click', doButtonClick);
 
         async function doButtonClick(){
-            await fetch(inp.value)
+            await fetch(inp.value, {
+            method: "GET"            
+            })
             .then((response) => text())
             .then((data) => {
                 inp.value = data;
