--- a/public_html/promise/index.html
+++ b/public_html/promise/index.html
@@ -1,5 +1,5 @@
 function task(x){
-  const pr = new Promise((res, rej) => x < 18 ? res('yes') : rej('no'));
-  pr.catch(rej => console.log(rej));
-  return pr;
-}
+    const pr = new Promise((res, rej) => x < 18 ? res('yes') : rej('no'))
+    .catch(rej => console.log(rej));
+	  return pr;
+ }
